// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableCell component TableCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <table
            class="gds-table"
          >
            <thead>
              <tr>
                <th
                  class=""
                >
                  <div
                    class="table--header-value"
                    tabindex="-1"
                  >
                    <span
                      class="gds-typography table--header-value--title right ellipsis"
                      title="Number"
                    >
                      Number
                    </span>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class=""
                tabindex="-1"
              >
                <td
                  class=""
                >
                  <div
                    class="gds-field-group"
                  >
                    <span
                      class="gds-amount-field amount-field-read-only table--cell-value--number-readonly"
                      id="number"
                      name="number"
                    >
                      1
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class=""
                tabindex="-1"
              >
                <td
                  class=""
                >
                  <div
                    class="gds-field-group"
                  >
                    <span
                      class="gds-amount-field amount-field-read-only table--cell-value--number-readonly"
                      id="number"
                      name="number"
                    >
                      2
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableCell component TableCell renders when hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <table
            class="gds-table"
          >
            <thead>
              <tr>
                <th
                  class=""
                >
                  <div
                    class="table--header-value"
                    tabindex="-1"
                  >
                    <span
                      class="gds-typography table--header-value--title right ellipsis"
                      title="Number"
                    >
                      Number
                    </span>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class=""
                tabindex="-1"
              >
                <td
                  class=""
                >
                  <div
                    class="gds-field-group"
                  >
                    <span
                      class="gds-amount-field amount-field-read-only table--cell-value--number-readonly"
                      id="number"
                      name="number"
                    >
                      1
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class=""
                tabindex="-1"
              >
                <td
                  class=""
                >
                  <div
                    class="gds-field-group"
                  >
                    <span
                      class="gds-amount-field amount-field-read-only table--cell-value--number-readonly"
                      id="number"
                      name="number"
                    >
                      2
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TableCell component TableCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="ellipsis"
        >
          <table
            class="gds-table"
          >
            <thead>
              <tr>
                <th
                  class=""
                >
                  <div
                    class="table--header-value"
                    tabindex="-1"
                  >
                    <span
                      class="gds-typography table--header-value--title right ellipsis"
                      title="Number"
                    >
                      Number
                    </span>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class=""
                tabindex="-1"
              >
                <td
                  class=""
                >
                  <div
                    class="gds-field-group"
                  >
                    <span
                      class="gds-amount-field amount-field-read-only table--cell-value--number-readonly"
                      id="number"
                      name="number"
                    >
                      3
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
